--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -12,8 +12,7 @@ VIDEO_CARDS="nvidia"
 
 INPUT_DEVICES="libinput"
 
-#This setting is necessary at the global level
-#use abi_x86_32 instead for local packages that require 32-bit support
+#Use abi_x86_32 instead for local packages that require 32-bit support
 #ABI_X86="32 64"
 
 ACCEPT_LICENSE="*"
