--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -19,9 +19,10 @@ ACCEPT_LICENSE="*"
 
 EMERGE_DEFAULT_OPTS="--ask --verbose --quiet"
 
-USE="X cjk jpeg opengl multilib alsa pulseaudio sound bluetooth dbus udev udisks suid gtk networkmanager \ 
-threads wifi elogind -bluray -cdda -cddb -cdinstall -cdr -dv -dvb -dvd -dvdr -examples -firebird -quicktime \ 
--samba -smartcard -qt5 -connman -consolekit -systemd -emacs -ios -ipod -kde -plasma -gnome -wayland"
+USE="X cjk jpeg opengl multilib alsa sound bluetooth dbus udev udisks suid gtk networkmanager \ 
+threads wifi elogind pulseaudio -bluray -cdda -cddb -cdinstall -cdr -dv -dvb -dvd -dvdr \ 
+-examples -firebird -quicktime -samba -smartcard -qt5 -connman -consolekit -systemd -emacs \ 
+-ios -ipod -kde -plasma -gnome -wayland"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
