--- a/etc/i3status.conf
+++ b/etc/i3status.conf
@@ -16,7 +16,8 @@ order += "playerctlbar"
 order += "volume_status"
 #order += "battery_level"
 #order += "backlight"
-order += "sysdata"
+order += "sysdata cpu"
+order += "sysdata mem"
 order += "diskdata"
 order += "tztime date"
 order += "tztime clock"
@@ -79,7 +80,13 @@ backlight {
 	separator_block_width = 15
 }
 
-sysdata {
+sysdata cpu {
+	format = "  {cpu_used_percent} %"
+	cache_timeout = 1
+        separator_block_width = 15
+}
+
+sysdata mem {
 	format = "  {mem_used} {mem_used_unit}"
 	cache_timeout = 1
         separator_block_width = 15
@@ -102,4 +109,3 @@ tztime clock {
         format = "  %H:%M:%S  |"
         separator_block_width = 15
 }
-
