--- a/etc/i3status.conf
+++ b/etc/i3status.conf
@@ -40,7 +40,7 @@ mpris {
 volume_status {
 	cache_timeout = 1
 	blocks = ""
-	format = "{icon}  {percentage}%"
+	format = "{icon}  {percentage} %"
 	format_muted = "  Muted"
 	separator_block_width = 15
 	thresholds = [
@@ -63,8 +63,8 @@ battery_level {
         battery_id = 0
         blocks = ""
         charging_character = ""
-        format = "{icon}  {percent}%"
-        format_notify_charging = "Charging ({percent}%), finishing in: {time_remaining}"
+        format = "{icon}  {percent} %"
+        format_notify_charging = "Charging ({percent} %), finishing in: {time_remaining}"
         format_notify_discharging = "Time remaining: {time_remaining}"
         notification = false
         notify_low_level = false
@@ -75,13 +75,13 @@ battery_level {
 }
 
 backlight {
-	format = "  {level}%"
+	format = "  {level} %"
 	cache_timeout = 1
 	separator_block_width = 15
 }
 
 sysdata cpu {
-	format = "  {cpu_used_percent} %"
+	format = "  {cpu_used_percent} %"
 	cache_timeout = 1
         separator_block_width = 15
 }
